--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 size="8" maxlength="8" /><br>
             <span>Password:</span>
             <!--Abertura de acesso a digitação senha e posicionamento-->
-            <input type="password" onchange="habilitaBotaoLogin()" text="senha" id="senha" width="50px" size="12"
+            <input type="pass" onchange="habilitaBotaoLogin()" text="senha" id="senha" width="50px" size="12"
                 maxlength="4" /><br>
             <!--Botão de Login e posicionamento-->
             <input disabled="true" class="button" type="button" id="Login" value="Login" width="110px"
