--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 
 <body onload="startTime()">
     <nav>
+        <a>
+            <img src="imagem/home.svg" alt="">
+            <p>dasdasdas</p>
+        </a>
         <p>GCAH</p>
         <p>Login de Usuário</p>
         <div class="date">
@@ -27,7 +31,7 @@
             <!--Abertura de acesso a digitação usuário e posicionamento-->
             <input class="login" type="text" onchange="habilitaBotaoLogin()" text="usuario" id="usuario" width="50px"
                 size="8" maxlength="8" /><br>
-            <span>Password:</span>
+            <span>Pass:</span>
             <!--Abertura de acesso a digitação senha e posicionamento-->
             <input type="password" onchange="habilitaBotaoLogin()" text="senha" id="senha" width="50px" size="12"
                 maxlength="4" /><br>
