--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <!--Abertura de acesso a digitação usuário e posicionamento-->
             <input class="login" type="text" onchange="habilitaBotaoLogin()" text="usuario" id="usuario" width="50px"
                 size="8" maxlength="8" /><br>
-            <span>Pass:</span>
+            <span>Senha:</span>
             <!--Abertura de acesso a digitação senha e posicionamento-->
             <input type="password" onchange="habilitaBotaoLogin()" text="senha" id="senha" width="50px" size="12"
                 maxlength="4" /><br>
